--- a/angular.json
+++ b/angular.json
@@ -21,18 +21,13 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/custom-theme.scss",
-              "src/styles.css"
-            ],
+            "styles": ["src/custom-theme.scss", "src/styles.css"],
             "server": "src/main.server.ts",
             "outputMode": "server",
             "ssr": {
               "entry": "src/server.ts"
             },
-            "polyfills": [
-              "@angular/localize/init"
-            ]
+            "polyfills": ["@angular/localize/init"]
           },
           "configurations": {
             "production": {
@@ -93,12 +88,8 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "polyfills": [
-              "@angular/localize/init"
-            ]
+            "styles": ["src/styles.css"],
+            "polyfills": ["@angular/localize/init"]
           }
         },
         "cypress-run": {
@@ -149,10 +140,7 @@
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
-            "lintFilePatterns": [
-              "src/**/*.ts",
-              "src/**/*.html"
-            ]
+            "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
           }
         }
       }
@@ -160,10 +148,6 @@
   },
   "cli": {
     "analytics": "5b387784-3612-4452-a63b-b19e810d0ddd",
-    "schematicCollections": [
-      "angular-eslint",
-      "@cypress/schematic",
-      "@schematics/angular"
-    ]
+    "schematicCollections": ["angular-eslint", "@cypress/schematic", "@schematics/angular"]
   }
 }
