--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "@angular/cli": "^20.3.1",
     "@angular/compiler-cli": "^20.3.0",
     "@angular/localize": "^20.3.0",
+    "@babel/core": "^7.28.4",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-typescript": "^7.27.1",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@cypress/schematic": "^4.1.2",
@@ -51,10 +54,12 @@
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
     "angular-eslint": "20.3.0",
+    "babel-jest": "^30.1.2",
     "cypress": "15.2.0",
     "eslint": "^9.35.0",
     "husky": "^9.1.7",
     "jasmine-core": "~5.9.0",
+    "jest": "^30.1.3",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
